deploy/istio/03/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app1
  namespace: demo
spec:
  hosts:
    - app1.demo.svc.cluster.local
  gateways:
    - mesh
    - istio-system/default
  http:
    - name: "app1-default"
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: app1.demo.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app2
  namespace: demo
spec:
  hosts:
    - app2.demo.svc.cluster.local
  gateways:
    - mesh
    - istio-system/default
  http:
    - name: "app2-v3"
      match:
        - uri:
            prefix: "/api"
      route:
        - destination:
            host: app2.demo.svc.cluster.local
            port:
              number: 80
            subset: v3
          weight: 80
        - destination:
            host: app2.demo.svc.cluster.local
            port:
              number: 80
            subset: v1
          weight: 10
        - destination:
            host: app2.demo.svc.cluster.local
            port:
              number: 80
            subset: v2
          weight: 10
      timeout: 2s
      retries:
        # Number of retries to be allowed for a given request.
        # The interval between retries will be determined automatically (25ms+).
        attempts: 3
        # Timeout per attempt for a given request, including the initial call and any retries.
        perTryTimeout: 0.5s
        retryOn: 5xx
        # retryOn: gateway-error,connect-failure,refused-stream
        # s. https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/router_filter#x-envoy-retry-on
        # obviusly envoy puts some default config for it :
        # "retry_policy": {
        #  "retry_on": "connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes",
        # docs: By default, Envoy will not perform retries unless you’ve configured them per above.
